find/FindParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 ./find/Find.g 2012-12-27 00:06:33

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  find 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class FindParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "DEPTH", "EQ", "ESC", "HEX_DIGIT", "INAME", "INTEGER", "IREGEX", "LPAREN", "NAME", "NOT", "OR", "REGEX", "RPAREN", "SIZE", "SIZEPOSTFIX", "STRING_LITERAL", "TYPE", "UNQOTED_LITERAL", "WS", "'d'", "'f'"
	};
	public const int EOF=-1;
	public const int T__24=24;
	public const int T__25=25;
	public const int AND=4;
	public const int DEPTH=5;
	public const int EQ=6;
	public const int ESC=7;
	public const int HEX_DIGIT=8;
	public const int INAME=9;
	public const int INTEGER=10;
	public const int IREGEX=11;
	public const int LPAREN=12;
	public const int NAME=13;
	public const int NOT=14;
	public const int OR=15;
	public const int REGEX=16;
	public const int RPAREN=17;
	public const int SIZE=18;
	public const int SIZEPOSTFIX=19;
	public const int STRING_LITERAL=20;
	public const int TYPE=21;
	public const int UNQOTED_LITERAL=22;
	public const int WS=23;

	public FindParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public FindParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return FindParser.tokenNames; } }
	public override string GrammarFileName { get { return "./find/Find.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_commandline();
	partial void LeaveRule_commandline();

	// $ANTLR start "commandline"
	// ./find/Find.g:12:1: commandline : ( expr )* ;
	[GrammarRule("commandline")]
	private AstParserRuleReturnScope<CommonTree, IToken> commandline()
	{
		EnterRule_commandline();
		EnterRule("commandline", 1);
		TraceIn("commandline", 1);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, IToken> expr1 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		try { DebugEnterRule(GrammarFileName, "commandline");
		DebugLocation(12, 1);
		try
		{
			// ./find/Find.g:13:2: ( ( expr )* )
			DebugEnterAlt(1);
			// ./find/Find.g:13:3: ( expr )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(13, 3);
			// ./find/Find.g:13:3: ( expr )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==DEPTH||LA1_0==INAME||(LA1_0>=IREGEX && LA1_0<=NOT)||LA1_0==REGEX||LA1_0==SIZE||LA1_0==TYPE))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// ./find/Find.g:13:3: expr
					{
					DebugLocation(13, 3);
					PushFollow(Follow._expr_in_commandline66);
					expr1=expr();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, expr1.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("commandline", 1);
			LeaveRule("commandline", 1);
			LeaveRule_commandline();
		}
		DebugLocation(14, 1);
		} finally { DebugExitRule(GrammarFileName, "commandline"); }
		return retval;

	}
	// $ANTLR end "commandline"

	partial void EnterRule_expr();
	partial void LeaveRule_expr();

	// $ANTLR start "expr"
	// ./find/Find.g:15:1: expr : ( paren_expr | or_expr );
	[GrammarRule("expr")]
	private AstParserRuleReturnScope<CommonTree, IToken> expr()
	{
		EnterRule_expr();
		EnterRule("expr", 2);
		TraceIn("expr", 2);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, IToken> paren_expr2 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> or_expr3 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		try { DebugEnterRule(GrammarFileName, "expr");
		DebugLocation(15, 1);
		try
		{
			// ./find/Find.g:16:2: ( paren_expr | or_expr )
			int alt2=2;
			try { DebugEnterDecision(2, false);
			int LA2_0 = input.LA(1);

			if ((LA2_0==LPAREN))
			{
				alt2 = 1;
			}
			else if ((LA2_0==DEPTH||LA2_0==INAME||LA2_0==IREGEX||(LA2_0>=NAME && LA2_0<=NOT)||LA2_0==REGEX||LA2_0==SIZE||LA2_0==TYPE))
			{
				alt2 = 2;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae = new NoViableAltException("", 2, 0, input);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// ./find/Find.g:16:4: paren_expr
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(16, 4);
				PushFollow(Follow._paren_expr_in_expr77);
				paren_expr2=paren_expr();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, paren_expr2.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// ./find/Find.g:17:4: or_expr
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(17, 4);
				PushFollow(Follow._or_expr_in_expr82);
				or_expr3=or_expr();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, or_expr3.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("expr", 2);
			LeaveRule("expr", 2);
			LeaveRule_expr();
		}
		DebugLocation(18, 1);
		} finally { DebugExitRule(GrammarFileName, "expr"); }
		return retval;

	}
	// $ANTLR end "expr"

	partial void EnterRule_paren_expr();
	partial void LeaveRule_paren_expr();

	// $ANTLR start "paren_expr"
	// ./find/Find.g:20:1: paren_expr : LPAREN ^ ( WS )? ( or_expr )* ( WS )? RPAREN ;
	[GrammarRule("paren_expr")]
	private AstParserRuleReturnScope<CommonTree, IToken> paren_expr()
	{
		EnterRule_paren_expr();
		EnterRule("paren_expr", 3);
		TraceIn("paren_expr", 3);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken LPAREN4 = default(IToken);
		IToken WS5 = default(IToken);
		IToken WS7 = default(IToken);
		IToken RPAREN8 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> or_expr6 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree LPAREN4_tree = default(CommonTree);
		CommonTree WS5_tree = default(CommonTree);
		CommonTree WS7_tree = default(CommonTree);
		CommonTree RPAREN8_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "paren_expr");
		DebugLocation(20, 34);
		try
		{
			// ./find/Find.g:21:2: ( LPAREN ^ ( WS )? ( or_expr )* ( WS )? RPAREN )
			DebugEnterAlt(1);
			// ./find/Find.g:21:4: LPAREN ^ ( WS )? ( or_expr )* ( WS )? RPAREN
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(21, 10);
			LPAREN4=(IToken)Match(input,LPAREN,Follow._LPAREN_in_paren_expr93); if (state.failed) return retval;
			if (state.backtracking == 0) {
			LPAREN4_tree = (CommonTree)adaptor.Create(LPAREN4);
			root_0 = (CommonTree)adaptor.BecomeRoot(LPAREN4_tree, root_0);
			}
			DebugLocation(21, 12);
			// ./find/Find.g:21:12: ( WS )?
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			int LA3_0 = input.LA(1);

			if ((LA3_0==WS))
			{
				int LA3_1 = input.LA(2);

				if ((EvaluatePredicate(synpred3_Find_fragment)))
				{
					alt3 = 1;
				}
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// ./find/Find.g:21:12: WS
				{
				DebugLocation(21, 12);
				WS5=(IToken)Match(input,WS,Follow._WS_in_paren_expr96); if (state.failed) return retval;
				if (state.backtracking == 0) {
				WS5_tree = (CommonTree)adaptor.Create(WS5);
				adaptor.AddChild(root_0, WS5_tree);
				}

				}
				break;

			}
			} finally { DebugExitSubRule(3); }

			DebugLocation(21, 16);
			// ./find/Find.g:21:16: ( or_expr )*
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, false);
				int LA4_0 = input.LA(1);

				if ((LA4_0==DEPTH||LA4_0==INAME||LA4_0==IREGEX||(LA4_0>=NAME && LA4_0<=NOT)||LA4_0==REGEX||LA4_0==SIZE||LA4_0==TYPE))
				{
					alt4 = 1;
				}


				} finally { DebugExitDecision(4); }
				switch ( alt4 )
				{
				case 1:
					DebugEnterAlt(1);
					// ./find/Find.g:21:16: or_expr
					{
					DebugLocation(21, 16);
					PushFollow(Follow._or_expr_in_paren_expr99);
					or_expr6=or_expr();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, or_expr6.Tree);

					}
					break;

				default:
					goto loop4;
				}
			}

			loop4:
				;

			} finally { DebugExitSubRule(4); }

			DebugLocation(21, 25);
			// ./find/Find.g:21:25: ( WS )?
			int alt5=2;
			try { DebugEnterSubRule(5);
			try { DebugEnterDecision(5, false);
			int LA5_0 = input.LA(1);

			if ((LA5_0==WS))
			{
				alt5 = 1;
			}
			} finally { DebugExitDecision(5); }
			switch (alt5)
			{
			case 1:
				DebugEnterAlt(1);
				// ./find/Find.g:21:25: WS
				{
				DebugLocation(21, 25);
				WS7=(IToken)Match(input,WS,Follow._WS_in_paren_expr102); if (state.failed) return retval;
				if (state.backtracking == 0) {
				WS7_tree = (CommonTree)adaptor.Create(WS7);
				adaptor.AddChild(root_0, WS7_tree);
				}

				}
				break;

			}
			} finally { DebugExitSubRule(5); }

			DebugLocation(21, 29);
			RPAREN8=(IToken)Match(input,RPAREN,Follow._RPAREN_in_paren_expr105); if (state.failed) return retval;
			if (state.backtracking == 0) {
			RPAREN8_tree = (CommonTree)adaptor.Create(RPAREN8);
			adaptor.AddChild(root_0, RPAREN8_tree);
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("paren_expr", 3);
			LeaveRule("paren_expr", 3);
			LeaveRule_paren_expr();
		}
		DebugLocation(21, 34);
		} finally { DebugExitRule(GrammarFileName, "paren_expr"); }
		return retval;

	}
	// $ANTLR end "paren_expr"

	partial void EnterRule_or_expr();
	partial void LeaveRule_or_expr();

	// $ANTLR start "or_expr"
	// ./find/Find.g:22:1: or_expr : and_expr ( ( WS )? OR ^ ( WS )? and_expr )* ;
	[GrammarRule("or_expr")]
	private AstParserRuleReturnScope<CommonTree, IToken> or_expr()
	{
		EnterRule_or_expr();
		EnterRule("or_expr", 4);
		TraceIn("or_expr", 4);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken WS10 = default(IToken);
		IToken OR11 = default(IToken);
		IToken WS12 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> and_expr9 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> and_expr13 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree WS10_tree = default(CommonTree);
		CommonTree OR11_tree = default(CommonTree);
		CommonTree WS12_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "or_expr");
		DebugLocation(22, 35);
		try
		{
			// ./find/Find.g:23:2: ( and_expr ( ( WS )? OR ^ ( WS )? and_expr )* )
			DebugEnterAlt(1);
			// ./find/Find.g:23:4: and_expr ( ( WS )? OR ^ ( WS )? and_expr )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(23, 4);
			PushFollow(Follow._and_expr_in_or_expr113);
			and_expr9=and_expr();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, and_expr9.Tree);
			DebugLocation(23, 13);
			// ./find/Find.g:23:13: ( ( WS )? OR ^ ( WS )? and_expr )*
			try { DebugEnterSubRule(8);
			while (true)
			{
				int alt8=2;
				try { DebugEnterDecision(8, false);
				int LA8_0 = input.LA(1);

				if ((LA8_0==WS))
				{
					int LA8_2 = input.LA(2);

					if ((LA8_2==OR))
					{
						alt8 = 1;
					}


				}
				else if ((LA8_0==OR))
				{
					alt8 = 1;
				}


				} finally { DebugExitDecision(8); }
				switch ( alt8 )
				{
				case 1:
					DebugEnterAlt(1);
					// ./find/Find.g:23:14: ( WS )? OR ^ ( WS )? and_expr
					{
					DebugLocation(23, 14);
					// ./find/Find.g:23:14: ( WS )?
					int alt6=2;
					try { DebugEnterSubRule(6);
					try { DebugEnterDecision(6, false);
					int LA6_0 = input.LA(1);

					if ((LA6_0==WS))
					{
						alt6 = 1;
					}
					} finally { DebugExitDecision(6); }
					switch (alt6)
					{
					case 1:
						DebugEnterAlt(1);
						// ./find/Find.g:23:14: WS
						{
						DebugLocation(23, 14);
						WS10=(IToken)Match(input,WS,Follow._WS_in_or_expr116); if (state.failed) return retval;
						if (state.backtracking == 0) {
						WS10_tree = (CommonTree)adaptor.Create(WS10);
						adaptor.AddChild(root_0, WS10_tree);
						}

						}
						break;

					}
					} finally { DebugExitSubRule(6); }

					DebugLocation(23, 20);
					OR11=(IToken)Match(input,OR,Follow._OR_in_or_expr119); if (state.failed) return retval;
					if (state.backtracking == 0) {
					OR11_tree = (CommonTree)adaptor.Create(OR11);
					root_0 = (CommonTree)adaptor.BecomeRoot(OR11_tree, root_0);
					}
					DebugLocation(23, 22);
					// ./find/Find.g:23:22: ( WS )?
					int alt7=2;
					try { DebugEnterSubRule(7);
					try { DebugEnterDecision(7, false);
					int LA7_0 = input.LA(1);

					if ((LA7_0==WS))
					{
						alt7 = 1;
					}
					} finally { DebugExitDecision(7); }
					switch (alt7)
					{
					case 1:
						DebugEnterAlt(1);
						// ./find/Find.g:23:22: WS
						{
						DebugLocation(23, 22);
						WS12=(IToken)Match(input,WS,Follow._WS_in_or_expr122); if (state.failed) return retval;
						if (state.backtracking == 0) {
						WS12_tree = (CommonTree)adaptor.Create(WS12);
						adaptor.AddChild(root_0, WS12_tree);
						}

						}
						break;

					}
					} finally { DebugExitSubRule(7); }

					DebugLocation(23, 26);
					PushFollow(Follow._and_expr_in_or_expr125);
					and_expr13=and_expr();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, and_expr13.Tree);

					}
					break;

				default:
					goto loop8;
				}
			}

			loop8:
				;

			} finally { DebugExitSubRule(8); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("or_expr", 4);
			LeaveRule("or_expr", 4);
			LeaveRule_or_expr();
		}
		DebugLocation(23, 35);
		} finally { DebugExitRule(GrammarFileName, "or_expr"); }
		return retval;

	}
	// $ANTLR end "or_expr"

	partial void EnterRule_and_expr();
	partial void LeaveRule_and_expr();

	// $ANTLR start "and_expr"
	// ./find/Find.g:24:1: and_expr : eql_expr ( ( WS )? AND ^ ( WS )? eql_expr )* ;
	[GrammarRule("and_expr")]
	private AstParserRuleReturnScope<CommonTree, IToken> and_expr()
	{
		EnterRule_and_expr();
		EnterRule("and_expr", 5);
		TraceIn("and_expr", 5);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken WS15 = default(IToken);
		IToken AND16 = default(IToken);
		IToken WS17 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> eql_expr14 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> eql_expr18 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree WS15_tree = default(CommonTree);
		CommonTree AND16_tree = default(CommonTree);
		CommonTree WS17_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "and_expr");
		DebugLocation(24, 36);
		try
		{
			// ./find/Find.g:25:2: ( eql_expr ( ( WS )? AND ^ ( WS )? eql_expr )* )
			DebugEnterAlt(1);
			// ./find/Find.g:25:4: eql_expr ( ( WS )? AND ^ ( WS )? eql_expr )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(25, 4);
			PushFollow(Follow._eql_expr_in_and_expr135);
			eql_expr14=eql_expr();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, eql_expr14.Tree);
			DebugLocation(25, 13);
			// ./find/Find.g:25:13: ( ( WS )? AND ^ ( WS )? eql_expr )*
			try { DebugEnterSubRule(11);
			while (true)
			{
				int alt11=2;
				try { DebugEnterDecision(11, false);
				int LA11_0 = input.LA(1);

				if ((LA11_0==WS))
				{
					int LA11_1 = input.LA(2);

					if ((LA11_1==AND))
					{
						alt11 = 1;
					}


				}
				else if ((LA11_0==AND))
				{
					alt11 = 1;
				}


				} finally { DebugExitDecision(11); }
				switch ( alt11 )
				{
				case 1:
					DebugEnterAlt(1);
					// ./find/Find.g:25:14: ( WS )? AND ^ ( WS )? eql_expr
					{
					DebugLocation(25, 14);
					// ./find/Find.g:25:14: ( WS )?
					int alt9=2;
					try { DebugEnterSubRule(9);
					try { DebugEnterDecision(9, false);
					int LA9_0 = input.LA(1);

					if ((LA9_0==WS))
					{
						alt9 = 1;
					}
					} finally { DebugExitDecision(9); }
					switch (alt9)
					{
					case 1:
						DebugEnterAlt(1);
						// ./find/Find.g:25:14: WS
						{
						DebugLocation(25, 14);
						WS15=(IToken)Match(input,WS,Follow._WS_in_and_expr138); if (state.failed) return retval;
						if (state.backtracking == 0) {
						WS15_tree = (CommonTree)adaptor.Create(WS15);
						adaptor.AddChild(root_0, WS15_tree);
						}

						}
						break;

					}
					} finally { DebugExitSubRule(9); }

					DebugLocation(25, 21);
					AND16=(IToken)Match(input,AND,Follow._AND_in_and_expr141); if (state.failed) return retval;
					if (state.backtracking == 0) {
					AND16_tree = (CommonTree)adaptor.Create(AND16);
					root_0 = (CommonTree)adaptor.BecomeRoot(AND16_tree, root_0);
					}
					DebugLocation(25, 23);
					// ./find/Find.g:25:23: ( WS )?
					int alt10=2;
					try { DebugEnterSubRule(10);
					try { DebugEnterDecision(10, false);
					int LA10_0 = input.LA(1);

					if ((LA10_0==WS))
					{
						alt10 = 1;
					}
					} finally { DebugExitDecision(10); }
					switch (alt10)
					{
					case 1:
						DebugEnterAlt(1);
						// ./find/Find.g:25:23: WS
						{
						DebugLocation(25, 23);
						WS17=(IToken)Match(input,WS,Follow._WS_in_and_expr144); if (state.failed) return retval;
						if (state.backtracking == 0) {
						WS17_tree = (CommonTree)adaptor.Create(WS17);
						adaptor.AddChild(root_0, WS17_tree);
						}

						}
						break;

					}
					} finally { DebugExitSubRule(10); }

					DebugLocation(25, 27);
					PushFollow(Follow._eql_expr_in_and_expr147);
					eql_expr18=eql_expr();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, eql_expr18.Tree);

					}
					break;

				default:
					goto loop11;
				}
			}

			loop11:
				;

			} finally { DebugExitSubRule(11); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("and_expr", 5);
			LeaveRule("and_expr", 5);
			LeaveRule_and_expr();
		}
		DebugLocation(25, 36);
		} finally { DebugExitRule(GrammarFileName, "and_expr"); }
		return retval;

	}
	// $ANTLR end "and_expr"

	partial void EnterRule_eql_expr();
	partial void LeaveRule_eql_expr();

	// $ANTLR start "eql_expr"
	// ./find/Find.g:26:1: eql_expr : ( not_expr | argument );
	[GrammarRule("eql_expr")]
	private AstParserRuleReturnScope<CommonTree, IToken> eql_expr()
	{
		EnterRule_eql_expr();
		EnterRule("eql_expr", 6);
		TraceIn("eql_expr", 6);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, IToken> not_expr19 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> argument20 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		try { DebugEnterRule(GrammarFileName, "eql_expr");
		DebugLocation(26, 11);
		try
		{
			// ./find/Find.g:27:2: ( not_expr | argument )
			int alt12=2;
			try { DebugEnterDecision(12, false);
			int LA12_0 = input.LA(1);

			if ((LA12_0==NOT))
			{
				alt12 = 1;
			}
			else if ((LA12_0==DEPTH||LA12_0==INAME||LA12_0==IREGEX||LA12_0==NAME||LA12_0==REGEX||LA12_0==SIZE||LA12_0==TYPE))
			{
				alt12 = 2;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae = new NoViableAltException("", 12, 0, input);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(12); }
			switch (alt12)
			{
			case 1:
				DebugEnterAlt(1);
				// ./find/Find.g:27:4: not_expr
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(27, 4);
				PushFollow(Follow._not_expr_in_eql_expr157);
				not_expr19=not_expr();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, not_expr19.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// ./find/Find.g:28:4: argument
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(28, 4);
				PushFollow(Follow._argument_in_eql_expr162);
				argument20=argument();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, argument20.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("eql_expr", 6);
			LeaveRule("eql_expr", 6);
			LeaveRule_eql_expr();
		}
		DebugLocation(28, 11);
		} finally { DebugExitRule(GrammarFileName, "eql_expr"); }
		return retval;

	}
	// $ANTLR end "eql_expr"

	partial void EnterRule_not_expr();
	partial void LeaveRule_not_expr();

	// $ANTLR start "not_expr"
	// ./find/Find.g:29:1: not_expr : ( NOT ^ ( WS )? argument | NOT ^ ( WS )? paren_expr );
	[GrammarRule("not_expr")]
	private AstParserRuleReturnScope<CommonTree, IToken> not_expr()
	{
		EnterRule_not_expr();
		EnterRule("not_expr", 7);
		TraceIn("not_expr", 7);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);
